[project]
name = "search-module"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9,<4.0"
dependencies = [
    "langchain-community>=0.3.14",
    "langchain>=0.3.14",
    "openai>=1.59.7",
    "pgvector>=0.3.6",
    "psycopg2-binary>=2.9.10",
    "tiktoken>=0.8.0",
    "python-dotenv>=1.0.1",
    "langchain-openai>=0.3.0",
    "flask>=3.0.0",
    "flask-cors>=5.0.0",
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
